// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package Geopkg;

service Geo {
    rpc add_geo(add_geoRequest) returns (add_geoResponce) {}
    rpc get_by_id(get_by_idRequest) returns (get_by_idResponce) {}
}

message add_geoRequest {
    string country = 1;
    string city = 2;
    string street = 3;
    string building = 4;
    string flat = 5;
    int64 userId = 6;
}
message get_by_idRequest {
    int64 id = 1;
}
message add_geoResponce {
    int64 id = 1;
}
message get_by_idResponce {
    int64 geoId = 1;
    int64 userId = 2;
    string country = 3;
    string city = 4;
    string street = 5;
    string building = 6;
    string flat = 7;
}
