syntax = "proto3";

service Order {
  rpc create_order(CreateOrderReq) returns (OrderId) {}
}

message CreateOrderReq {
  int32 geoId = 1;
  int32 userId = 2;
  int32 productId = 3;
  string firstName = 4;
  string secondName = 5;
  string comment = 6;
  string phoneNumber = 7;
}
message OrderId {
  int32 orderId = 1;
}

message EmptyMessage {}